----------------------------------------------------------------------
 OmegaT 4.1.5 update 3
----------------------------------------------------------------------
  1 Enhancement
  2 Bug fixes
  4 Localisation updates
----------------------------------------------------------------------
4.1.5 update 3 vs 4.1.5 update 2

  Implemented requests:

  - Add Moodle .php files filter
  https://sourceforge.net/p/omegat/feature-requests/1407/

  Bug fixes:

  - Team projects: some Subversion network errors were not detected
as an offline condition

  - Console mode crashes with a valid project
  https://sourceforge.net/p/omegat/bugs/926/

  Localisation Updates:

  - Dutch localisation updated to 4.1.5 update 3 (UI, readme)
  - Interlingua localisation updated to 4.1.5 update 3 (UI, readme)
  - Italian localisation updated to 4.1.5 update 3 (UI, scripts, readme)
  - Russian localisation updated to 4.1.5 update 3 (UI, scripts, readme)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 2 (2018-09-19)
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.5 update 2 vs 4.1.5 update 1

  Other changes:

  - Show human readable error on version check failure

  - Allow to use two methods of authentication (username/password or
apiKey) for IBM Watson MT

  Bug fixes:

  - Team projects fail to open in offline mode
  https://sourceforge.net/p/omegat/bugs/849/

  - Incomplete mirroring in team projects
  https://sourceforge.net/p/omegat/bugs/920/

  Localisation Updates:

  - Sardinian localisation updated to 4.1.5 (UI)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 1 (2018-08-06)
----------------------------------------------------------------------
  3 Enhancements
  4 Bug fixes
  0 Localisation update