@@ -1,0 +1,78 @@
+body {
+	font-family: sans-serif;
+	margin: 1em;
+}
+
+h1, h2, table, dt {
+	color: navy;
+}
+
+h3, h4, ul a {
+	color: green;
+}
+
+code, .code {
+	color: black;
+	background: #ffffcc;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ffff66;
+	vertical-align: top;
+}
+
+.new {
+	font-size: x-small;
+	color: red;
+	background: yellow;
+}
+
+.updated {
+	font-size: x-small;
+	color: orange;
+}
+
+.note {
+	font-size: small;
+	color: black;
+	background: silver;
+}
+
+.warning {
+	color: red;
+	background: yellow;
+}
+
+.chapter {
+	color: black;
+}
+
+.navbar-top, .navbar-bottom {
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+.rel-p {
+	width: 9%;
+	align: left;
+	valign: center;
+	font-weight: bold;
+}
+
+.rel-n {
+	width: 6%;
+	align: left;
+	valign: center;
+	font-weight: bold;
+} 
+
+.nav-link {
+	width: 39%;
+	align: left;
+	valign: center;
+}
+
+.toc-link {
+	 width: 7%;
+	 align: left;
+	 valign: center;
+}
