@@ -1,0 +1,163 @@
+<html>
+   <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   
+      <title>Impara a impreare OmegaT in 5 minutos!</title>
+      <link rel="stylesheet" type="text/css" href="OmegaT.css">
+      <meta name="generator" content="DocBook XSL Stylesheets V1.78.1">
+   </head>
+   <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
+      <div class="chapter">
+         <div class="titlepage">
+            <div>
+               <div>
+                  <h2 class="title"><a name="chapter.instant.start.guide"></a>Impara a impreare OmegaT in 5 minutos!
+                  </h2>
+               </div>
+            </div>
+         </div>
+         <div class="section">
+            <div class="titlepage">
+               <div>
+                  <div>
+                     <h2 class="title" style="clear: both"><a name="create.and.open.new.project"></a>1.&nbsp;Cunfigura unu progetu nou<a class="indexterm" name="d0e7"></a></h2>
+                  </div>
+               </div>
+            </div>
+            <p><em><span class="remark">Note:</span></em> In unu Mac de Apple, imprea sa tecla <span class="keycap"><strong>Command</strong></span> imbetzes de sa tecla <span class="keycap"><strong>Control</strong></span>.
+            </p><a class="indexterm" name="d0e22"></a><p>Pro cumintzare a impreare OmegaT, crea in antis unu progetu chi cuntèngiat totu is archìvios, che a s'archìviu de orìgine,
+               memòrias de tradutzione, glossàrios e mancari puru s'archìviu tradùidu.  In su menù <span class="guimenu">Progetu</span>, sèbera <span class="guimenuitem">Nou...</span> e iscrie unu nòmine pro su progetu tuo. Regorda in ue ses creende su progetu, ca as a tènnere bisòngiu de torrare luego a
+               cussa cartella.
+            </p>
+            <p>A pustis de àere donadu unu nòmine a su progetu, s'at a abèrrere su cuadru de diàlogu <span class="guilabel">Crea unu progetu nou</span>. In pitzu de cussu cuadru de diàlogu, sèbera sa limba de s'archìviu de orìgine e sa limba chi at a tènnere s'archìviu tradùidu,
+               e incarca <span class="guibutton">AB</span> pro sighire.
+            </p>
+            <p>Si boles modificare cale si siat cunfiguratzione de custu cuadru de diàlogu, bi podes torrare cando boles cun <span class="keycap"><strong>Ctrl+E.</strong></span></p>
+            <p>A pustis, s'at a abèrrere su cuadru de diàlogu <span class="guilabel">Archìvios de su progetu</span>. Incarca subra <span class="guibutton">Còpia archìvios in sa cartella de orìgine...</span> pro seberare is archìvios de orìgine tuos. OmegaT at a copiare is archìvios seletzionados in sa cartella <code class="filename">/source/</code> de su progetu chi as creadu. Cando is archìvios de orìgine ant a èssere istados carrigados in s'<span class="guilabel">Editore</span>, as a pòdere serrare su cuadru de diàlogu <span class="guilabel">Archìvios de su progetu</span>.
+            </p>
+         </div>
+         <div class="section">
+            <div class="titlepage">
+               <div>
+                  <div>
+                     <h2 class="title" style="clear: both"><a name="translate.the.segments.one.by.one"></a>2.&nbsp;Borta s'archìviu
+                     </h2>
+                  </div>
+               </div>
+            </div>
+            <p>OmegaT t'at a presentare unu segmentu de tradùere a sa borta. Cando as a àere tradùidu cada segmentu, preme <span class="keycap"><strong>Ctrl+U</strong></span> pro mòere a su segmentu de bortare imbeniente (o <span class="keycap"><strong>Ctrl+majùscula+U</strong></span> pro mòere a su segmentu tradùidu imbeniente). Cando as a bòlere bìdere comente at a èssere sa tradutzione tua in su formadu
+               finale, preme <span class="keycap"><strong>Ctrl+D</strong></span> pro generare is documentos tradùidos, chi ant a èssere creados in sa cartella <code class="filename">/target/</code> de su progetu tuo. In sa tradutzione, imprea is menùs <span class="guimenu">Modìfica</span> e <span class="guimenu">Bae a</span> pro àteras funtziones ùtiles.
+            </p>
+         </div>
+         <div class="section">
+            <div class="titlepage">
+               <div>
+                  <div>
+                     <h2 class="title" style="clear: both"><a name="d0e88"></a>3.&nbsp;Controlla is etichetas tuas
+                     </h2>
+                  </div>
+               </div>
+            </div>
+            <p>Si is archìvios de orìgine tuos tenent formadu, che a Microsoft Word, LibreOffice Writer o HTML, OmegaT at a cunvertire su
+               formadu in etichetas a s'inghìriu de su testu chi ses bortende. A s'ispissu, is documentos ant a cuntènnere etichetas chi
+               no currispondent a su formadu, però chi sunt importantes in is archìvios de orìgine (e in is archìvios tradùidos). Una frase
+               de orìgine podet èssere che:
+            </p>
+            <div class="mediaobject" align="justify"><img src="images/InstantGuide_1.png" align="justify"></div>
+            <p>
+               
+            </p>
+            <p>In cada manera, OmegaT at a presentare sa frase in custa manera:</p>
+            <div class="mediaobject" align="justify"><img src="images/InstantGuide_2.png" align="justify"></div>
+            <p>
+               
+            </p>
+            <p>Is etichetas de OmegaT sunt in colore murru, in manera chi siant fàtziles de reconnòschere. Sunt protègidas, pro chi is cuntenutos
+               non potzant èssere modificados, però ddas podes cantzellare, insertare a manu o ddas mòere in àteras positziones de sa frase
+               tradùida. In cada manera, si faghes una faddina iscriende is etichetas de formadu, podet dare chi is archìvios tradùidos tuos
+               no potzant èssere abertos. Duncas, preme <span class="keycap"><strong>Ctrl+majùscula+V</strong></span> in antis de generare is archìvios tradùidos pro controllare chi is etichetas sunt curretas.
+            </p>
+         </div>
+         <div class="section">
+            <div class="titlepage">
+               <div>
+                  <div>
+                     <h2 class="title" style="clear: both"><a name="d0e112"></a>4.&nbsp;Gènera s'archìviu tradùidu
+                     </h2>
+                  </div>
+               </div>
+            </div>
+            <p>Cando as a èssere seguru chi non bi sunt faddinas in is etichetas de sa tradutzione tua, preme <span class="keycap"><strong>Ctrl+D</strong></span> pro generare is archìvios tradùidos, chi ant a èssere creados in sa cartella <code class="filename">/target/</code> de su progetu tuo.
+            </p>
+         </div>
+         <div class="section">
+            <div class="titlepage">
+               <div>
+                  <div>
+                     <h2 class="title" style="clear: both"><a name="d0e123"></a>5.&nbsp;Àteras cosas de importu
+                     </h2>
+                  </div>
+               </div>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Si no resesses a carrigare un'archìviu in s'<span class="guilabel">Editore</span> de OmegaT, podet dare chi siat in unu formadu non reconnotu. Abbàida <a class="link" href="#">Filtros de archìviu</a> pro bìdere sa lista de formados reconnotos dae OmegaT. 
+                     </p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Podes creare unu progetu nou pro cada tarea noa, e semper podes agiùnghere archìvios de orìgine noos a unu progetu.</p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Su cuadru de diàlogu de propiedades de su progetu cuntenet is cunfiguratziones initziales de su progetu. Si ti ddas ismèntigas,
+                        ddu podes abèrrere cun <span class="keycap"><strong>Ctrl+E</strong></span>. Pro bìdere una lista de is archìvios de su progetu, aberi su cuadru de diàlogu <span class="guilabel">Archìvios de su progetu</span> cun is teclas <span class="keycap"><strong>Ctrl+L</strong></span>.
+                     </p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>A sa fine de sa tradutzione, OmegaT esporta tres memòrias de tradutzione cun su nòmine <code class="filename">level1</code>, <code class="filename">level2</code> e <code class="filename">omegat</code> in sa cartella de su progetu tuo. Is memòrias <code class="filename">level1</code> e <code class="filename">level2</code> podent èssere cumpartzidas cun is usuàrios de àteros programmas de tradutzione. Sa memòria cun su nòmine <code class="filename">omegat</code> podet èssere impreada cun OmegaT in progetos futuros. Si pones custos archìvios de memòria de tradutzione in sa cartella
+                        <code class="filename">/tm/</code> de su progetu, OmegaT bi at a chircare in automàticu segmentos simigiantes, tzerriados "cointzidèntzias partziales" o "fuzzy
+                        matches". 
+                     </p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Podes agiùnghere tèrmines noos a su glossàriu cun is teclas <span class="keycap"><strong>Ctrl+majùscula+G</strong></span>, o podes copiare glossàrios chi esistint giai in sa cartella <code class="filename">/glossary/</code> de su progetu tuo, e OmegaT bi at a chircare paràulas in automàticu.
+                     </p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Podet èssere ùtile chircare paràulas e frases in su testu de orìgine e in sa tradutzione: imprea su cuadru de diàlogu <span class="guilabel">Chirca testu</span> tràmite is teclas <span class="keycap"><strong>Ctrl+F</strong></span>.
+                     </p>
+                  </li>
+               </ul>
+            </div>
+            <div class="itemizedlist">
+               <ul class="itemizedlist" style="list-style-type: disc; ">
+                  <li class="listitem">
+                     <p>Leghe un'introdutzione prus cumpleta in sa ghia <a class="ulink" href="https://omegat.org/files/OmegaT_for_Beginners.pdf" target="_top">OmegaT for beginners</a> de su situ web de OmegaT. Si ti serbit agiudu cun cale si siat aspetu de OmegaT, aderi a su <a class="ulink" href="https://groups.yahoo.com/neo/groups/OmegaT/info" target="_top">grupu de usuàrios de OmegaT</a>.
+                     </p>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </body>
+</html>
